Styling fixes
* Make flags wrap together
* Fix closing 'x' overlapping with input

--- a/_sass/fullscreen.scss
+++ b/_sass/fullscreen.scss
@@ -18,7 +18,7 @@
     display: block;
     background-color: #eee;
     input {
-        margin-top: 0em;
+        margin-top: 1em;
         text-align: center;
         border: none;
         font-size: 3em;
